<resources>
    <string name="app_name">huabanDemo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_scrolling">Scrolling</string>
    <string name="title_activity_Image">Image</string>
    <string name="title_activity_Login">Login</string>
    <string name="title_activity_image_detail">ImageDetail</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_search_result">Search%s</string>
    <string name="title_activity_module">Module</string>

    <string name="title_fragment_image">Images</string>
    <string name="title_fragment_board">Boards</string>
    <string name="title_fragment_user">User</string>

    <string name="action_settings">setting</string>

    <string name="snack_message_main_gather">start to gather</string>
    <string name="snack_message_login_success">login success</string>
    <string name="snack_message_net_error">network error to system setting</string>
    <string name="snack_message_password_error">This password is incorrect</string>
    <string name="snack_message_unknown_error">unknown error</string>
    <string name="snack_message_data_error">data error</string>
    <string name="snack_action_to_setting">Setting</string>


    <string name="nav_user_name">username</string>
    <string name="nav_user_email">user@email.com</string>
    <string name="nav_attention">attention</string>
    <string name="nav_gather">gather</string>
    <string name="nav_message">message</string>
    <string name="nav_friends">friend</string>
    <string name="nav_used_scan">scan</string>

    <string name="menu_all">ALL</string>
    <string name="menu_popular">POPULAR</string>
    <string name="menu_home">HOME</string>
    <string name="menu_diy_crafts">CRAFTS</string>
    <string name="menu_photography">PHOTOGRAPHY</string>
    <string name="menu_food_drink">FOOD</string>
    <string name="menu_travel_places">TRAVEL</string>
    <string name="menu_illustration">ILLUSTRATION</string>
    <string name="menu_design">DESIGN</string>
    <string name="menu_apparel">APPAREL</string>
    <string name="menu_modeling_hair">MODELING</string>
    <string name="menu_wedding_events">WEDDING</string>
    <string name="menu_desire">DESIRE</string>
    <string name="menu_beauty">BEAUTY</string>
    <string name="menu_pets">PETS</string>
    <string name="menu_kids">KIDS</string>
    <string name="menu_architecture">ARCHITECTURE</string>
    <string name="menu_film_music_books">BOOKS</string>
    <string name="menu_tips">TIPS</string>
    <string name="menu_art">ART</string>
    <string name="menu_men">MEN</string>

    <string name="action_bar_search">Search</string>
    <string name="action_bar_add">Add</string>
    <string name="action_bar_edit">Edit</string>

    <string name="hint_search">key</string>
    <string name="hint_not_history">noting</string>

    <string name="text_search_history">History</string>
    <string name="text_reference">reference</string>

    <string name="card_title">测试Card的title应该是很长的文本</string>
    <string name="card_username">用户名14sp</string>
    <string name="card_gather">采集到图库14sp</string>


    <string name="net_error">net error</string>
    <string name="net_error_data">net error on data</string>


    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This Username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

      <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="text_foot_loading">loading</string>
    <string name="text_foot_error">error</string>
    <string name="text_foot_end">end</string>

    <string name="text_image_like_number"> %d like</string>
    <string name="text_image_gather_number"> %d gather</string>
    <string name="text_recommend">recommend</string>
    <string name="text_to">To</string>

</resources>
