<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@color/primary"
        >


        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/img_nav_head"
            android:layout_width="@dimen/head_img_size_big"
            android:layout_height="@dimen/head_img_size_big"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/nav_marginTop"
            />


        <ImageButton
            style="@style/ibtn_padding_bg"
            android:id="@+id/ibtn_nav_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="24dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/nav_info_height"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/ibtn_nav_arrow"
            android:layout_toStartOf="@+id/ibtn_nav_arrow"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nav_username"
                style="@style/nav_text_style"
                android:text="@string/nav_user_name"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nav_email"
                style="@style/nav_text_style"
                android:text="@string/nav_user_email"
                />

        </LinearLayout>

        <ImageButton
            style="@style/ibtn_padding_bg"
            android:id="@+id/ibtn_nav_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_nav_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/btn_nav_attention"
            style="@style/nav_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nav_attention"
            />

        <Button
            android:id="@+id/btn_nav_gather"
            style="@style/nav_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nav_gather" />

        <Button
            android:id="@+id/btn_nav_message"
            style="@style/nav_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nav_message" />

        <Button
            android:id="@+id/btn_nav_friends"
            style="@style/nav_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nav_friends" />
    </LinearLayout>

</LinearLayout>
