<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="licola.demo.com.huabandemo.activity.SearchActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_search"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
            <AutoCompleteTextView
                android:id="@+id/actv_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_search"
                android:singleLine="true"
                android:maxLines="1"
                android:inputType="textAutoComplete"
                android:completionThreshold="1"
                android:popupBackground="@color/white"
                />
            </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollview_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           >
            <!--预留的LinearLayout所有子控件padding-->
            <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
            <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
            <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
            <!--android:paddingTop="@dimen/activity_vertical_margin"-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/text_search_history"
                    android:padding="12dp"
                    android:textColor="@color/secondary_text"
                    />
                <ImageButton
                    style="@style/ibtn_padding_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:src="@drawable/ic_close_white_24dp"
                    android:id="@+id/ibtn_clear_history"
                    />
            </LinearLayout>

            <licola.demo.com.huabandemo.view.FlowLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flow_history"
                android:padding="@dimen/activity_margin"
                android:background="@color/white"
                >

            </licola.demo.com.huabandemo.view.FlowLayout>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/text_reference"
               android:padding="12dp"
               android:textColor="@color/secondary_text"
               />
            <licola.demo.com.huabandemo.view.FlowLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flow_reference"
                >

            </licola.demo.com.huabandemo.view.FlowLayout>

        </LinearLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
